# GeoCatch

./: .gitignore  CMakeLists.txt  Main.qml  README.md  databaseManager.cpp  databaseManager.h  main.cpp  qml.qrc  validator.cpp  validator.h
app/: CMakeCache.txt.prev  api_responses.db  appgeocatch_qmltyperegistrations.cpp  cmake_install.cmake
app/.qt/: QtDeploySupport.cmake
app/.qt/deploy_qml_imports/: appGeoCatch.cmake
app/GeoCatch/: FontSystem.qml  Main.qml  appGeoCatch_qml_module_dir_map.qrc  qml.qrc  qmldir
app/meta_types/: appGeoCatch_json_file_list.txt  appGeoCatch_json_file_list.txt.timestamp  qt6appgeocatch_release_metatypes.json
app/qmltypes/: appGeoCatch_foreign_types.txt
include/: databaseManager.h
src/: databaseManager.cpp  networkManager.cpp  validator.cpp
src/include/: networkManager.h  validator.h
test/: networkManagerTest.cpp
